--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<title>Paid Course</title>
 </head>
 <body>
-<h1>Coursera Web for online paid course</h1>
+<h1>Online paid Webcourse</h1>
 <h2>27-03-2023</h2>
 </body>
 </html>
