--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Paid Course</title>
+	<title>Paid CourseHTMLCSS</title>
 </head>
 <body>
 <h1>Online paid Webcourse</h1>
