--- a/Module_2_Coding_Assignment/index.html
+++ b/Module_2_Coding_Assignment/index.html
@@ -23,7 +23,7 @@ p {
   margin-right: auto;
   margin-left: auto;
   font-family: Helvetica;
-  color: white;
+  color: black;
 }
 
 /* Simple Responsive Framework. */
