--- a/Module_2_Coding_Assignment/index.html
+++ b/Module_2_Coding_Assignment/index.html
@@ -26,6 +26,21 @@ p {
   color: black;
 }
 
+p {
+  border: 1px solid black;
+  background-color: #999999;
+  width: 90%;
+  height: 150px;
+  margin-right: auto;
+  margin-left: auto;
+  font-family: Helvetica;
+  color: black;
+}
+
+
+
+
+
 /* Simple Responsive Framework. */
 .row {
   width: 100%;
