--- a/Module_2_Coding_Assignment/index.html
+++ b/Module_2_Coding_Assignment/index.html
@@ -27,14 +27,14 @@ p {
 }
 
 p {
-  border: 1px solid black;
+  border: 2px solid black;
   background-color: #999999;
-  width: 90%;
-  height: 150px;
-  margin-right: auto;
-  margin-left: auto;
+  width: 10%;
+  height: 50px;
+  margin-left:0;
+  margin-top: 0;
   font-family: Helvetica;
-  color: black;
+  color: darkred;
 }
 
 
