--- a/Module_2_Coding_Assignment/index.html
+++ b/Module_2_Coding_Assignment/index.html
@@ -30,7 +30,7 @@ p> p1{
   border: 2px solid black;
   background-color: #999999;
   width: 10%;
-  height: 50px;
+  height: 100px;
   margin-left:0;
   margin-top: 0;
   font-family: Helvetica;
@@ -140,7 +140,7 @@ p> p1{
 <h1>Our Menu</h1>
 
 <div class="row">
-  <div class="col-lg-3 col-md-6"><p1>Item 9</p1></div>
+  <div class="col-lg-3 col-md-6"><p>Item 2<p1>Item 9</p1></p></div>
   <div class="col-lg-3 col-md-6"><p>Item 2</p></div>
   <div class="col-lg-3 col-md-6"><p>Item 3</p></div>
   <div class="col-lg-3 col-md-6"><p>Item 4</p></div>
