--- a/Module_2_Coding_Assignment/index.html
+++ b/Module_2_Coding_Assignment/index.html
@@ -28,7 +28,7 @@ p {
 
 p> p1{
   border: 2px solid black;
-  background-color: #999999;
+  background-color: #d19185;
   width: 10%;
   height: 100px;
   margin-left:0;
