--- a/Module_2_Coding_Assignment/index.html
+++ b/Module_2_Coding_Assignment/index.html
@@ -29,12 +29,13 @@ p {
 p> p1{
   border: 2px solid black;
   background-color: #d19185;
-  width: 10%;
+
+    width: 10%;
   height: 100px;
-  margin-left:0;
-  margin-top: 0;
+  margin-left:auto;
+  margin-top:auto;
   font-family: Helvetica;
-  color: darkred;
+  color: black;
 }
 
 
