--- a/Module_2_Coding_Assignment/index.html
+++ b/Module_2_Coding_Assignment/index.html
@@ -27,13 +27,13 @@ p {
 }
 
  p1{
-  border: 4px solid black;
+  border: 2px solid black;
   background-color: #d19185;
 
     width: 50%;
   height: 150px;
-  margin-left:auto;
-  margin-top:auto;
+  margin-right:0;
+  margin-top:0;
   font-family: Helvetica;
   color: black;
 }
