--- a/Module_2_Coding_Assignment/index.html
+++ b/Module_2_Coding_Assignment/index.html
@@ -26,22 +26,7 @@ p {
   color: black;
 }
 
- p1{
-  border: 2px solid black;
-  background-color: #d19185;
-
-    width: 50%;
-  height: 150px;
-  
-  
-  font-family: Helvetica;
-  color: black;
-}
-
-
-
-
-
+ 
 /* Simple Responsive Framework. */
 .row {
   width: 100%;
@@ -141,7 +126,7 @@ p {
 <h1>Our Menu</h1>
 
 <div class="row">
-  <div class="col-lg-3 col-md-6"><p>Item 2<p1>Item 9</p1></p></div>
+  <div class="col-lg-3 col-md-6"><p>Item 1</p></div>
   <div class="col-lg-3 col-md-6"><p>Item 2</p></div>
   <div class="col-lg-3 col-md-6"><p>Item 3</p></div>
   <div class="col-lg-3 col-md-6"><p>Item 4</p></div>
