--- a/Module_2_Coding_Assignment/index.html
+++ b/Module_2_Coding_Assignment/index.html
@@ -15,6 +15,27 @@ h1 {
   text-align: center;
 }
 
+section {
+        position: relative; /* Make the section a positioned element */
+        border: 1px solid black; /* Add a border for demonstration purposes */
+        padding: 1em; /* Add some padding to the section */
+      }
+      .section-title {
+        position: absolute; /* Make the section title region an absolutely positioned element */
+        top: 0; /* Position the section title region at the top of the section */
+        right: 0; /* Position the section title region at the right of the section */
+        background-color: #FFA500; /* Set the background color of the section title region */
+        color: white; /* Set the text color of the section title region */
+        padding: 0.5em; /* Add some padding to the section title region */
+      }
+
+
+
+
+
+
+
+
 p {
   border: 1px solid black;
   background-color: #999999;
@@ -125,8 +146,11 @@ p {
 <body>
 <h1>Our Menu</h1>
 
+<section>
+
 <div class="row">
-  <div class="col-lg-3 col-md-6"><p>Item 1</p></div>
+  <div class="section-title,col-lg-3 col-md-6">Chicks
+    <p>1234567890</p></div>
   <div class="col-lg-3 col-md-6"><p>Item 2</p></div>
   <div class="col-lg-3 col-md-6"><p>Item 3</p></div>
   <div class="col-lg-3 col-md-6"><p>Item 4</p></div>
@@ -136,5 +160,6 @@ p {
   <div class="col-lg-3 col-md-6"><p>Item 8</p></div>
 </div>
 
+</section>
 </body>
 </html>
