--- a/Module_2_Coding_Assignment/index.html
+++ b/Module_2_Coding_Assignment/index.html
@@ -149,7 +149,7 @@ p {
 <section>
 
 <div class="row">
-  <div class="section-title,col-lg-3 col-md-6">Chicks
+  <div class="col-lg-3 col-md-6 section-title">Chicks
     <p>1234567890</p></div>
   <div class="col-lg-3 col-md-6"><p>Item 2</p></div>
   <div class="col-lg-3 col-md-6"><p>Item 3</p></div>
