--- a/Module_2_Coding_Assignment/index.html
+++ b/Module_2_Coding_Assignment/index.html
@@ -146,11 +146,20 @@ p {
 <body>
 <h1>Our Menu</h1>
 
-<section>
+
 
 <div class="row">
-  <div class="col-lg-3 col-md-6 section-title">Chicks
-    <p>1234567890</p></div>
+  <div class="col-lg-3 col-md-6 "><p>This is the content of the section.</p>
+
+<section>
+      <div class="section-title">Section Title</div>
+      <p>This is the content of the section.</p>
+    </section>
+
+
+
+
+  </div>
   <div class="col-lg-3 col-md-6"><p>Item 2</p></div>
   <div class="col-lg-3 col-md-6"><p>Item 3</p></div>
   <div class="col-lg-3 col-md-6"><p>Item 4</p></div>
@@ -160,6 +169,6 @@ p {
   <div class="col-lg-3 col-md-6"><p>Item 8</p></div>
 </div>
 
-</section>
+
 </body>
 </html>
