--- a/Module_2_Coding_Assignment/index.html
+++ b/Module_2_Coding_Assignment/index.html
@@ -149,7 +149,7 @@ p {
 
 
 <div class="row">
-  <div class="col-lg-3 col-md-6 "><p>This is the content of the section.</p>
+  <div class="col-lg-3 col-md-6 "><p>Item1</p>
 
 <section>
       <div class="section-title">Section Title</div>
