--- a/Module_2_Coding_Assignment/index.html
+++ b/Module_2_Coding_Assignment/index.html
@@ -152,7 +152,7 @@ p {
   <div class="col-lg-3 col-md-6 "><p>Item1</p>
 
 <section>
-      <div class="section-title">Section Title</div>
+      <span class="section-title">Section Title</span>
       
     </section>
 
