--- a/Module_2_Coding_Assignment/index.html
+++ b/Module_2_Coding_Assignment/index.html
@@ -149,25 +149,22 @@ p {
 
 
 <div class="row">
-  <div class="col-lg-3 col-md-6 "><p>Item1</p>
+  <div class="col-lg-3 col-md-6 ">
 
 <section>
-      <span class="section-title">Section Title</span>
-      
+      <div class="section-title">chicken</div>
+      <p>This is the content of the section.</p>
+    </section>
+
+<div class="col-lg-3 col-md-6 ">
+
+<section>
+      <div class="section-title">Beef</div>
+      <p>This is the content of the section.</p>
     </section>
 
 
-
-
-  </div>
-  <div class="col-lg-3 col-md-6"><p>Item 2</p></div>
-  <div class="col-lg-3 col-md-6"><p>Item 3</p></div>
-  <div class="col-lg-3 col-md-6"><p>Item 4</p></div>
-  <div class="col-lg-3 col-md-6"><p>Item 5</p></div>
-  <div class="col-lg-3 col-md-6"><p>Item 6</p></div>
-  <div class="col-lg-3 col-md-6"><p>Item 7</p></div>
-  <div class="col-lg-3 col-md-6"><p>Item 8</p></div>
-</div>
+  
 
 
 </body>
