--- a/Module_2_Coding_Assignment/index.html
+++ b/Module_2_Coding_Assignment/index.html
@@ -149,22 +149,33 @@ p {
 
 
 <div class="row">
-  <div class="col-lg-3 col-md-6 ">
+      <div class="col-lg-3 col-md-6 ">
 
-<section>
-      <div class="section-title">chicken</div>
-      <p>This is the content of the section.</p>
-    </section>
+        <section>
+           <div class="section-title">chicken</div>
+           <p>This is the content of the section.</p>
+        </section>
 
-<div class="col-lg-3 col-md-6 ">
+      </div>
 
-<section>
-      <div class="section-title">Beef</div>
-      <p>This is the content of the section.</p>
-    </section>
+      <div class="col-lg-3 col-md-6 ">
+          
+          <section>
+             <div class="section-title">Beef</div>
+             <p>This is the content of the section.</p>
+          </section>
+
+      </div>
+
+      <div class="col-lg-3 col-md-6 ">
+         
+         <section>
+           <div class="section-title">Sushi</div>
+           <p>This is the content of the section.</p>
+        </section>
+      </div>
 
 
-  
 
 
 </body>
