--- a/Module_2_Coding_Assignment/index.html
+++ b/Module_2_Coding_Assignment/index.html
@@ -18,7 +18,7 @@ h1 {
 section {
         position: relative; /* Make the section a positioned element */
         border: 1px solid black; /* Add a border for demonstration purposes */
-        padding: 1em; /* Add some padding to the section */
+        /* padding: 1em;  Add some padding to the section */
       }
       .section-title {
         position: absolute; /* Make the section title region an absolutely positioned element */
