--- a/Module_2_Coding_Assignment/index.html
+++ b/Module_2_Coding_Assignment/index.html
@@ -16,7 +16,7 @@ h1 {
 }
 
 section {
-        position: absolute; /* Make the section a positioned element */
+        position: relative; /* Make the section a positioned element */
          border: 1px solid black;  /* Add a border for demonstration purposes */
          padding: 1em;  /* Add some padding to the section */
       }
