--- a/Module_2_Coding_Assignment/index.html
+++ b/Module_2_Coding_Assignment/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" type="css" href="M2.css">
+<link rel="stylesheet" type="css" href="Assign2.css">
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -43,9 +43,6 @@
         </section>
       
       </div>
-
-
-
 
 </body>
 </html>
