--- a/Module_2_Coding_Assignment/index.html
+++ b/Module_2_Coding_Assignment/index.html
@@ -29,7 +29,7 @@
       <div class="col-lg-4 col-md-6 col-sm-12">
           
           <section>
-             <div class="section-title">Beef</div>
+             <div class="section-title">Beef  background-color: #FF0000; </div>
              <p>Rich and flavorful, beef is a hearty protein that is loved by many. Whether it's a juicy steak, a comforting beef stew, or a spicy beef curry, there's no denying the deliciousness of a well-cooked beef dish.</p>
           </section>
 
