--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
   <body>
     <h1>Main page</h1>
     
-    <a href="PaidHTMLCSS/Module_2_Coding_Assignment/index.html">Solution of Module 2 coding assignment</a>
+    <a href="Module_2_Coding_Assignment/index.html">Solution of Module 2 coding assignment</a>
+  
+<a href="https://github.com/Shaiby1975/PaidHTMLCSS.git">GIT</a>
+
+
   </body>
 </html>
