--- a/Module_2_Coding_Assignment/M2Assign.html
+++ b/Module_2_Coding_Assignment/M2Assign.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" href="Module_2_Coding_Assignment/CSS/Assign2.css">
+<link rel="stylesheet" href="https://github.com/Shaiby1975/PaidHTMLCSS/Module_2_Coding_Assignment/CSS/Assign2.css">
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
