--- a/module4-solution/index.html
+++ b/module4-solution/index.html
@@ -11,6 +11,7 @@
   <script src="script.js"></script>
 </head>
 <body>
-  <h1>Module 4 Solution Starter</h1>
+  <h1>Module 4 Solution Starter<br>
+    -------------------Right click here and inspect element to check the console out--------------------</h1>
 </body>
 </html>
